--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -41,7 +41,8 @@
             android:visibility="gone"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:padding="15dp"/>
+            android:layout_marginRight="5dp"
+            android:padding="10dp"/>
 
         <TextView
             android:id="@+id/tvRight"
