--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="title">16sp</dimen>
     <dimen name="content">14sp</dimen>
     <dimen name="txt_12">12sp</dimen>
+    <dimen name="price">18sp</dimen>
 
     <dimen name="line">0.5dp</dimen>
     <dimen name="tar">11sp</dimen>
