--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -48,7 +48,7 @@
             android:id="@+id/tvRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/txt_333"
             android:textSize="@dimen/title"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
