--- a/app/src/main/res/layout/activity_trade_list.xml
+++ b/app/src/main/res/layout/activity_trade_list.xml
@@ -15,4 +15,20 @@
         android:layout_height="match_parent"
         android:divider="@null"></ListView>
 
+    <RelativeLayout
+        android:id="@+id/rlEmpty"
+        android:layout_width="match_parent"
+        android:layout_height="350dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/content"
+            android:textColor="@color/txt_999"
+            android:drawableTop="@mipmap/ico_empty"
+            android:text="很遗憾，没有找到查询结果"
+            android:gravity="center"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
 </LinearLayout>
