--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -16,12 +16,12 @@
         android:textColor="@color/txt_333"
         android:lineSpacingExtra="2dp"
         android:text="1、此二维码为您在本平台专属的分享二维码\n2、通过您的分享注册过来的商家或个人，您可获得他在平台内现金消费金额10%的奖励\n3、长按二维码可保存至手机"
-        android:textSize="@dimen/txt_12"/>
+        android:textSize="@dimen/content"/>
 
     <ImageView
         android:id="@+id/ivQr"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
         android:layout_margin="30dp"/>
@@ -32,7 +32,7 @@
         android:layout_height="45dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:textColor="@color/white"
         android:textSize="@dimen/content"
